# gordon

./: .gitignore  README.md  config.example.env  pyproject.toml
src/gordon/: graph.py  ingest_doc.py  ingest_web.py  loadmodel.py  query.py
